--- a/junchantxt.html
+++ b/junchantxt.html
@@ -11,13 +11,12 @@
     <font face=Arial>
 
   </head>
-  <body style="background-color:black;">
+  <body style="background-color:#040707;">
     <center>
       <strong>
-      <img src="dunkatbannertext.png"/>
 
 
-      <center><h3><font color=white> LA LUNA Y EL CONEJO.</h3></center>
+      <center><h2><font color=white> LA LUNA Y EL CONEJO.</h2></center>
 
 <font color=red><center><h3>
         La luna le dijo al conejo:
@@ -40,6 +39,82 @@
 
         Confía en mi, como lo hago yo contigo ahora      <h1>ㅤ</h1>
 </h3>
+
+
+
+<center><h2><font color=white> CONEXIONES.</h2></center>
+
+<font color=red><center><h3>
+Máquinas conectadas a 20 individuos y aquellos conectados al laberinto, el papel se encuentrara en blanco tendrán que dibujar en el.
+Paisajes, hospitales, ciudades he incluso recuerdos,
+centrados y desalineados. Pero nunca tomaron en cuenta que el que más odia, tiene el control del universo. </h3>
+
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+
+
+<center><h2><font color=white> FUEGO DE INVIERNO.</h2></center>
+
+<font color=red><center><h3>
+Una dama arruyaba a su recien nacido, este lloraba, gritaba, absoluta desesperación, me pregunto por qué?, tal vez solo es simple hambre pero me gusta pensar que es algo más.
+
+Taan debil por algo que debería ser nada, me pregunto como será cuando la nada se convierta en algo?, ahora entiendo a las madres asesinas, tan locos pero en su locura se puede encontrar cierta razón. Condenado!!, condenado en un mundo donde nadie pregunta si quieres vivir, te eligen sin razón alguna, esto se supone que debería de ser bueno o malo?... que te deparará el futuro pequeño cabezón.
+
+Una madre retraída pero de alguna manera unida con un sentimiento de deber hacía el pequeño, dicen que no hay nada parecido como la conexión de madre e hijo, pero yo digo que no hay nada más filosófico que una madre sosteniendo en brazos a su bebé.
+
+ㅤ
+<h1>  </h1>
+
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+
+
+
+
+
+<center><h2><font color=white> LA PUERTA.</h2></center>
+
+<font color=red><center><h3>
+
+Estaba el chico enfrente de una puerta gigante, tan grande que no se le veía fin, paralizado y con miedo ¿podrá abrir la puerta del infinito?, que ni la persona más fuerte y grande puede abrir,miró su mano, en ella puso todo su odio y dolor, con la misma golpeo su rostro lo más fuerte que pudo...
+
+Desapareció todo lo malo y lo consumió la esperanza y valor, mientras se acercá a la puerta del infinito aquella se encoge hasta quedar a su tamaño y poder abrirla.
+
+Donde encontró oscuridad y la única luz que salía era la de su ser, obstinado a tocar la oscuridad intentó e intentó hasta alcanzarla volviendola en una habitación blanca y el oscuro desapareciendo como polvo de estrella...</h3>
+
+<P>
+
+
+
+
+</P>
+
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+
+
+
+  <P>
+
+  </P>
+
+<center><h2><font color=white> EL ARBOL.</h2></center>
+
+<font color=red><center><h3>
+
+El árbol ardía por dentro sus frutos se convirtieron en gotas de sangre y la vida...
+La vida llora,sus plegarias esquizofrenicas acabaron con su dulce respiración de supervivencia
+
+
 
 
 </center>
