--- a/junchan.html
+++ b/junchan.html
@@ -5,10 +5,11 @@
          <a style= "color: red"><a href="qienessomos.html" style="color: red; text-decoration: none;"><strong><font face=Arial> <font size="+6">ㅤATRAS</a></strong> </font>
     <meta charset="utf-8">
     <title>Jun Chan</title>
+
   </head>
   <font face=Verdana
     <h1>ㅤ</h1>
-
+    <center><img src="logojununo.png"></center>
   <body>
 
     <ul class="menu">
@@ -16,7 +17,7 @@
   <font face=Arial>
       <center><li><strong><a href="junchantxt.html" style="color: red; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤㅤ
 
-      <li><strong><a href="NADAt.html" style="color: red; text-decoration: none;"><font size="+3">Mis Fotos</a></strong></li></center
+      <li><strong><a href="NADAt.html" style="color: red; text-decoration: none;"><font size="+3">Mis Dibujos</a></strong></li></center
 
 
 
