--- a/menu.html
+++ b/menu.html
@@ -9,12 +9,6 @@
 <form>
   <img src="ejem.png"/>
   <center>
-    <font face=Arial>
-    <h1 style="color: white">
-
-
-
-    </center>
     <center>
 
 
@@ -29,36 +23,43 @@
       </style>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 30%; color: white"><a href="Fotografias.html">Fotografias</button></a>
+          <button style="position: absolute;top: 25%; color: white"><font size="4" face=Arial><strong><a href="Fotografias.html">Fotografias</button></a>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 36%; color: white"><a href="Dibujos.html">Dibujos</button></a>
+          <button style="position: absolute;top: 31%; color: white"><font size="4" face=Arial><strong><a href="Dibujos.html">Dibujos</button></a>
       </div
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 42%; color: white"><a href="Textos.html">Mis Textos</button></a>
+          <button style="position: absolute;top: 37%; color: white"><font size="4" face=Arial><strong><a href="Textos.html">Mis Textos</button></a>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 48%; color: white"><a href="Musica.html"> Mi Musica</button></a>
+          <button style="position: absolute;top: 43%; color: white"><font size="4" face=Arial><strong><a href="Musica.html"> Mi Musica</button></a>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 54%; color: white"><a href="Pareidolias.html"> Pareidolias</button></a>
+          <button style="position: absolute;top: 49%; color: white"><font size="4" face=Arial><strong><a href="Pareidolias.html"> Pareidolias</button></a>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 60%; color: white"><a href="Videoclips.html"> Videoclips</button></a>
+          <button style="position: absolute;top: 55%; color: white"><font size="4" face=Arial><strong><a href="Videoclips.html"> Videoclips</button></a>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 66%; color: white"><a href="Sobre mi.html"> Sobre Mi</button></a>
+          <button style="position: absolute;top: 61%; color: white"><font size="4" face=Arial><strong><a href="Sobre mi.html"> Sobre Mi</button></a>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 72%; color: white"><a href="Rimasroboticas.html"> Rimas Robotica</button></a>
+          <button style="position: absolute;top: 67%; color: white"><font size="4" face=Arial><strong><a href="Rimasroboticas.html"> Rimas Robotica</button></a>
       </div>
+    <font face=Arial>
+    <h1 style="color: white">
+
+
+
+    </center>
+
 
 
 
