--- a/Sobre mi.html
+++ b/Sobre mi.html
@@ -9,8 +9,8 @@
   <center>
     <font face="Arial" size="7" color: "white">
     <b><a href="menu.html" style="color: white">Menu</a></b></center></font>
-
-  <center><H4><font color="white">Tomas C. 18 años, estudiante.
+    <font face=Arial>
+  <center><H3><font color="white">Tomas C. 18 años, estudiante.
 
 Naci un 14 de Noviembre el 1995, soy horoscopo escorpio basandonos en caracteristicas cosmicas, hijo de Eugenia, padrastro de chico: Daniel el Psiquiatra, me ayudo a criarme muy bien, buena persona, siempre me gusto la diversion, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardin!
 
@@ -38,26 +38,31 @@ Busco mezclar un agudo tono de suficiente alegria con un mensaje muy raro, absur
 
 Remarco decir que todo esto lo organize de una noche a la otra, todo el orden de los albums, los videos, tengo mas videos, y sigo y sigo sin parar aunque vaya solo estoy solo conmigo y mis amigos.
 
-Me gustan los espejos, la comida chatarra y escuchar musica, mientras pinto o escribo algo. </H4></center>
+Me gustan los espejos, la comida chatarra y escuchar musica, mientras pinto o escribo algo. </H3></center>
 
   </body>
 </html>
 
 <style media="screen">
-  /* Esto es codigo CSS porque esta adentro de un tag <style> */
+
+  p {
+    color:white;
+    outline: none;
+    background-color: #A816ff;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
 
   * {   background-color: black
 
     }
 
-
-    a {
-      color:white;
-      outline: none;
-      background-color: black;
-      padding: 5px 10px;
-      text-decoration: none;
-      border-radius: 5px;
+    *{
+  font-family: Arial;
+  text-align: center;
+  line-height: 25px;
     }
+
 
 </style>
