--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <title>Free Freaks</title>
   </head>
-  <link rel="shortcut icon" type="img/png" href="img/iconos.png">
-  <body>
+<link rel="icon" href="iconos.png">  <body>
     <font size="2" style="color: red">® Creado por Tomas Collado Long </font>
     <center>
       <font size="5" font="Arial">
