--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Free Freaks - Menu</title>
   </head>
-    <link rel="shortcut icon" type="img/png" href="img/iconos.png">
+  <link rel="icon" href="iconos.png">
         <font size="1" style="color: red">® Creado por Tomas Collado Long </font>
 <form>
   <img src="ejem.png"/>
