--- a/Dibujos.html
+++ b/Dibujos.html
@@ -5,6 +5,7 @@
     <title>Free Freaks - Dibujos</title>
     <link rel="shortcut icon" type="img/png" href="img/iconos.png">
   </head>
+  <link rel="icon" href="iconos.png">  
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/lightbox.min.css">
   <script src="js/lightbox-plus-jquery.min.js"></script>
