--- a/Textos.html
+++ b/Textos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-  <link rel="shortcut icon" type="img/png" href="img/iconos.png">
     <meta charset="utf-8">
     <title>Free Freaks - Mis Textos</title>
   </head>
+  <link rel="icon" href="iconos.png">
   <body>
     <center>
     <center><H1><u><b><a href="menu.html" style= "color: white">Menu</a></b></u><H1></center>
