--- a/Musica.html
+++ b/Musica.html
@@ -4,8 +4,8 @@
 
     <meta charset="utf-8">
     <title>Free Freaks - Mis Musica</title>
-    <link rel="shortcut icon" type="img/png" href="img/iconos.png">
   </head>
+  <link rel="icon" href="iconos.png">  
   <body>
     <center>
       <font face="Arial" size="7" color: "black">
