--- a/Musica.html
+++ b/Musica.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Free Freaks - Mis Musica</title>
   </head>
-  <link rel="icon" href="iconos.png">  
-  <body>
+<link rel="icon" href="iconos.png">    <body>
     <center>
       <font face="Arial" size="7" color: "black">
       <b><a href="menu.html" style="color: white">Menu</a></b>
