--- a/Pareidolias.html
+++ b/Pareidolias.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Free Freaks - Pareidolias</title>
-    <link rel="shortcut icon" type="img/png" href="img/iconos.png">
+<link rel="icon" href="iconos.png">
   </head>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/lightbox.min.css">
