--- a/Videoclips.html
+++ b/Videoclips.html
@@ -5,7 +5,7 @@
     <title>Free Freaks - Videoclips</title>
 
   </head>
-    <link rel="shortcut icon" type="img/png" href="img/iconos.png">
+<link rel="icon" href="iconos.png">
   <font face="Arial" size="7" color: "white">
 <center><b><a href="menu.html" style="color: white">Menu</a></b> </center>
   <body>
