--- a/Sobre mi.html
+++ b/Sobre mi.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Free Freaks - Sobre Mi</title>
   </head>
-    <link rel="shortcut icon" type="img/png" href="img/iconos.png">
-  <body>
+<link rel="icon" href="iconos.png">
+<body>  >
+
   <center>
     <font face="Arial" size="7" color: "white">
     <b><a href="menu.html" style="color: white">Menu</a></b></center></font>
