--- a/Rimasroboticas.html
+++ b/Rimasroboticas.html
@@ -5,8 +5,8 @@
     <title>Free Freaks - Rimas Roboticas</title>
 
   </head>
-    <link rel="shortcut icon" type="img/png" href="img/iconos.png">
-  <body>
+<link rel="icon" href="iconos.png">
+<body>
 
     <center>
       <font face="Arial" size="7" color: "white">
