--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 67%; color: white"><font size="4" face=Arial><strong><a href="Rimasroboticas.html"> Rimas Robotica</button></a>
+          <button style="position: absolute;top: 67%; color: white"><font size="4" face=Arial><strong><a href="Rimasroboticas.html"> Rimas Roboticas</button></a>
       </div>
     <font face=Arial>
     <h1 style="color: white">
