--- a/junchan.html
+++ b/junchan.html
@@ -17,7 +17,7 @@
   <font face=Arial>
       <center><li><strong><a href="junchantxt.html" style="color: red; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤㅤ
 
-      <li><strong><a href="NADAt.html" style="color: red; text-decoration: none;"><font size="+3">Mis Dibujos</a></strong></li></center
+      <li><strong><a href="dibujosjun.html" style="color: red; text-decoration: none;"><font size="+3">Mis Dibujos</a></strong></li></center
 
 
 
