--- a/junchantxt.html
+++ b/junchantxt.html
@@ -6,7 +6,7 @@
     <title>Jun Chan - Mis Textos</title>
   <font face=Arial>
     <font face=Arial; size="+2">
-    <h1><strong><center><a href="jun_chan.html" style="color: red; text-decoration: none;">ATRAS</a></strong><center></h1></font>
+    <h1><strong><center><a href="junchan.html" style="color: red; text-decoration: none;">ATRAS</a></strong><center></h1></font>
 
     <font face=Arial>
 
