--- a/menu.html
+++ b/menu.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <title>Free Freaks - Menu</title>
   </head>
+  <section>
+    <div id="logodos">
+    <h4>logodos</h4>
+    <img src="ejem3.png">
+  </div>
+
+
+
   <link rel="icon" href="iconos.png">
         <font size="1" style="color: red">® Creado por Tomas Collado Long </font>
 <form>
-  <img src="ejem.png"/>
+  <img src="ejem2.png"/>
   <center>
     <center>
 
@@ -23,38 +31,44 @@
       </style>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 25%; color: white"><font size="4" face=Arial><strong><a href="Fotografias.html">Fotografias</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 25%; color: red"><a href="Fotografias.html"> Fotografias</b>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 31%; color: white"><font size="4" face=Arial><strong><a href="Dibujos.html">Dibujos</button></a>
-      </div
-
-      <div style= "text-align: top;">
-          <button style="position: absolute;top: 37%; color: white"><font size="4" face=Arial><strong><a href="Textos.html">Mis Textos</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html"> Dibujos</b>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 43%; color: white"><font size="4" face=Arial><strong><a href="Musica.html"> Mi Musica</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 37%; color: red"><a href="Textos.html"> Mis Textos</b>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 49%; color: white"><font size="4" face=Arial><strong><a href="Pareidolias.html"> Pareidolias</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 43%; color: red"><a href="Musica.html"> Mi Musica</b>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 55%; color: white"><font size="4" face=Arial><strong><a href="Videoclips.html"> Videoclips</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 49%; color: red"><a href="Pareidolias.html"> Pareidolias</b>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 61%; color: white"><font size="4" face=Arial><strong><a href="Sobre mi.html"> Sobre Mi</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 55%; color: red"><a href="Videoclips.html"> Videoclips</b>
       </div>
 
       <div style= "text-align: top;">
-          <button style="position: absolute;top: 67%; color: white"><font size="4" face=Arial><strong><a href="Rimasroboticas.html"> Rimas Roboticas</button></a>
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 61%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
       </div>
-    <font face=Arial>
-    <h1 style="color: white">
+
+      <div style= "text-align: top;">
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 67%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
+      </div>
 
 
 
@@ -70,11 +84,11 @@
     </center>
 
     <font size="5" face=Arial>
-<h1 style="left:700px; position: absolute;top: 0%; color: red">FreekTom</h1>
+<h1 style="left:700px; position: absolute;top: 8%; color: red">FreekTom</h1>
 
 <div style= "text-align: top;">
   <font size="18" face=Arial>
-<b style="left:640px; position: absolute;top: 80%; color: red"><a href="freeks.html"> .::FREEKS::.</b>
+<b style="left:605px; position: absolute;top: 80%; color: red"><a href="freeks.html"> .::FREEKS::.</b>
 </div>
 
   <body>
@@ -118,6 +132,10 @@
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
+  }
+
+  #logodos{
+    float:right;
   }
   /* Aca termina el codigo CSS */
 </style>
