--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Free Freaks - Menu</title>
   </head>
+  <link rel="icon" href="iconos.png">  <body>
+  
   <section>
     <div id="logodos">
     <h4>logodos</h4>
