acrualizacion de jun chan

--- a/dibujosjun.html
+++ b/dibujosjun.html
@@ -20,8 +20,8 @@
       <a href="dibujosjun/4.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/4.jpg"></a>
       <a href="dibujosjun/5.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/5.jpg"></a>
       <a href="dibujosjun/6.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/6.jpg"></a>
-
-
+      <a href="dibujosjun/7.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/7.jpg"></a>
+      <a href="dibujosjun/8.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/8.jpg"></a>
   </body>
 </html>
 <style>
