--- a/junchantxt.html
+++ b/junchantxt.html
@@ -112,7 +112,123 @@ Donde encontró oscuridad y la única luz que salía era la de su ser, obstinado
 <font color=red><center><h3>
 
 El árbol ardía por dentro sus frutos se convirtieron en gotas de sangre y la vida...
-La vida llora,sus plegarias esquizofrenicas acabaron con su dulce respiración de supervivencia
+La vida llora,sus plegarias esquizofrenicas acabaron con su dulce respiración de supervivencia</h3>
+
+<P>
+
+
+
+
+</P>
+
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+
+
+
+  <P>
+
+  </P>
+
+<center><h2><font color=white> EL PEQUEÑO CONEJO.</h2></center>
+
+<font color=red><center><h3>
+
+  Estaba ahí paseando, solo uno de los muchos conejos del bosques, los depredadores acechaban todo el tiempo, sin hogar, sin amigos, solo el y la vida.
+
+  Monstruos gigantes arremetieron contra el pequeño conejo agonizando de felicidad. Estaba solo desangrandose en aquella noche estrellada, así que miro a la reina de la noche y dijo: dejame ser tu acompañante, dejame brillar como las estrellas, dejame volar como un ángel, déjame ser especial... junto a ti...</h3>
+
+  <P>
+
+
+
+
+  </P>
+
+  ㅤ
+  ㅤ
+  ㅤ
+  ㅤ
+  ㅤ
+
+
+
+    <P>
+
+    </P>
+
+  <center><h2><font color=white> LA REINA CARMESÍ.</h2></center>
+
+  <font color=red><center><h3>
+
+    Ella era un hermoso árbol, cautivaba a todos a su alrededor con su hermoso resplandor, llenaba de esperanza a las pobres caras blancas, hasta que un día el deslumbrante árbol contemplo la realidad y aquel resplandor de su interior se apagó, las hojas cayeron, la savia poco a poco se eveneno,
+    y las raíces se tornaron color carmesí..poco a poco hasta convertirse en el árbol carmesí...
+
+    Aquellas pobres almas terminaron en lo que llamo el medio, un mundo gobernado por el carmesí.
+    Donde no tendrás nombre serás completamente blanco y lo que se diga se hará la reina jugará hasta que consiga todas tus piezas y cuando el ejercito este completado...
+
+    Ellos sabrán lo que es ser derrotado, rezarán, sacrificarán por sus vidas y temeran por que no cambiarán en nada, solo que la obsesión estará por encima.
+
+    Hasta entonces viajeros que los pétalos de aquella rosa amarilla acaricie vuestro corazón.</h3>
+
+
+    <P>
+
+
+
+
+    </P>
+
+    ㅤ
+    ㅤ
+    ㅤ
+    ㅤ
+    ㅤ
+
+
+
+      <P>
+
+      </P>
+
+    <center><h2><font color=white> SUEÑO LUCIDO.</h2></center>
+
+    <font color=red><center><h3>El estaba siendo ahorcado ¿por qué?, ¿por quién?.
+Sus ojos subían y su boca se abría de una manera perturbadora, no sufría, no se ponía morado éramos totalmente blancos,rasgue con mis uñas mi cara lo más fuerte y desesperadamente posible,mis manos agarraban su cuello luego me vi en el charco los dos éramos blancos</h3>
+
+<P>
+
+
+
+
+</P>
+
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+ㅤ
+
+
+
+  <P>
+
+  </P>
+
+<center><h2><font color=white> EL MAL.</h2></center>
+
+<font color=red><center><h3>Todos quieren un mundo de paz y amor, sin dolor, sin sufrimiento, sin pensamiento y sin corazón.
+Pero ¿Por qué?, el mal te enseña si tienes corazón o no
+
+El bien es un gesto gentil, nos da nuestro lado inmaduro, el mal es agridulce, nos da nuestro lado maduro. Lo que nos falta es saber equilibrarlo.
+
+Es simple sin el mal nosotros no seríamos nada,
+El mal es el privilegio más importante de todo
+El te enseña y tú lo pones en práctica,
+Así que queridos no falten a su clase.</h3>
 
 
 
