--- a/lunatikaos.html
+++ b/lunatikaos.html
@@ -17,7 +17,7 @@
 
 
             <font face=Arial>
-                <center><li><strong><a href="dunkatxt.html" style="color: #dbc8e6; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤㅤ
+                <center><li><strong><a href="lunatikaostxt.html" style="color: #dbc8e6; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤㅤ
 
                 <li><strong><a href="dunkatxt.html" style="color: #dbc8e6; text-decoration: none;"><font size="+3">Mis Fotos</a></strong></li></center
 ㅤㅤ
@@ -31,7 +31,7 @@
         </style>
 
     <div id="menuu">
-          
+
 
 
 <div id="menu">
