--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <font size="5" font="Arial">
   <h2 id:"titulo" style="color: white">Free Freaks</h2>
 
-      <img src="portada.png" />
+      <img src="" />
       <br />
       <a id:"entrada" href="menu.html">ENTRAR </a>
     </center>
