--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 
 
 
-  <link rel="icon" href="iconos.png">
+  <link rel="icon" href="iconossss.png">
         <font size="1" style="color: red">® Creado por Tomas Collado Long </font>
 <form>
   <img src="ejem2.png"/>
