--- a/menu.html
+++ b/menu.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>Free Freaks - Menu</title>
   </head>
-  <link rel="icon" href="iconos.png">  <body>  
+  <link rel="icon" href="iconos.png">  <body>
   <section>
     <div id="logodos">
     <h4>logodos</h4>
-    <img src="ejem3.png">
+    <img src="ejem333.png">
   </div>
 
 
 
-  <link rel="icon" href="iconossss.png">
+  <link rel="icon" href="iconos.png">
         <font size="1" style="color: red">® Creado por Tomas Collado Long </font>
 <form>
   <img src="ejem2.png"/>
