--- a/qienessomos.html
+++ b/qienessomos.html
@@ -70,10 +70,13 @@
                 <li><center><h2 style= "color: red"><a href="dunkat.html" style="color: #5a0e87; text-decoration: none;">4) Dunkatㅤ</a> </li>
                 <li><center><h2 style= "color: red"><a href="lunatikaos.html" style="color: #5c8495; text-decoration: none;">5) Lunatikaosㅤ</a> </li>
                 <li><center><h2 style= "color: red"><a href="junchan.html" style="color: #D6dbdb; text-decoration: none;">6) Jun-Chanㅤ</a> </li>
+                  <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
+                    <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
+                      <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
+                        <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
 
-
-
-
+                <li><center><h2 style= "color: red"><a href="George R. W. Wagner.html" style="color: #5a0e87; text-decoration: none;">7) George R. W. Wagner </a> </li>
+ㅤㅤㅤㅤㅤㅤㅤㅤㅤ
 
 
 
