--- a/George R. W. Wagner.html
+++ b/George R. W. Wagner.html
@@ -23,7 +23,7 @@
 
 
 
-    <center><strong><center> <h3 style= "color:  white"><font size="+2">El universo es casi como el mar, es vasto, silencioso y ha conocido tanto alegrías como tristezas, pero, tal como el mar, nunca revela a viva voz los secretos que celosamente guarda y ni el astrólogo más versado puede jactarse de haber descubierto su totalidad. ¿Cuántas vidas ha costado mapearlo en su totalidad? ¿Es un esfuerzo vano que deberíamos abandonar y dejarnos morir en apenas un segundo de los millones de años de existencia? ¿O deberíamos seguir solo por amor y no por la mera pretensión de conquistarlo?</h3></strong></center>
+    <center><strong><center> <h3 style= "color:  white"><font size="+2">El universo es casi como el mar, es vasto, silencioso y ha conocido tanto alegrías como tristezas, pero, tal como el mar, nunca revela a viva voz los secretos que celosamente guarda y ni el astrólogo más versado puede jactarse de haberlo descubierto su totalidad. ¿Cuántas vidas ha costado mapearlo por completo? ¿Es un esfuerzo vano que deberíamos abandonar y dejarnos morir en apenas un segundo de los millones de años de existencia del cosmos? ¿O deberíamos seguir solo por amor y no por la mera pretensión de conquistarlo?</h3></strong></center>
 
         </style>
 
