--- a/qienessomos.html
+++ b/qienessomos.html
@@ -75,7 +75,7 @@
                       <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
                         <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
 
-                <li><center><h2 style= "color: red"><a href="George R. W. Wagner.html" style="color: #5a0e87; text-decoration: none;">7) George R. W. Wagner </a> </li>
+                <li><center><h2 style= "color: red"><a href="George R. W. Wagner.html" style="color: green; text-decoration: none;">7) George R. W. Wagner </a> </li>
 ㅤㅤㅤㅤㅤㅤㅤㅤㅤ
 
 
