--- a/George R. W. Wagner.html
+++ b/George R. W. Wagner.html
@@ -11,13 +11,13 @@
 
 
 <center> <strong> <a style= "color: white"><font size="+26"> George R. W. Wagner</a></strong></center>
+  <font face=Arial>
+      <center><li><strong><a href="georgetxts.html" style="color: white; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>
   <body ondragstart="return false" onselectstart="return false" oncontextmenu="return false">
 
         <ul class="menu">
 
 
-            <font face=Arial>
-                <center><li><strong><a href="lunatikaostxt.html" style="color: white; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>
 
 
 
