--- a/George R. W. Wagner.html
+++ b/George R. W. Wagner.html
@@ -1,49 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-         <a style= "color: whitek"><a href="qienessomos.html" style="color: white; text-decoration: none;"><strong><font face=Arial> <font size="+6">ㅤATRAS</a></strong> </font>
+        <link rel="shortcut icon" type="ico" href="iconos.ico">
+         <a style= "color: white"><a href="qienessomos.html" style="color: white; text-decoration: none;"><strong><font face=Arial> <font size="+6">ㅤATRAS</a></strong> </font>
     <meta charset="utf-8">
     <title>George R. W. Wagner</title>
+<center><li><strong><a style="color: white"; text-decoration: none;"><font size="+4">George R. W. Wagner</a></strong></li>
   </head>
+  <body>
+
+    <ul class="menu">
+
   <font face=Arial>
+      <center><li><strong><a href="Georgetxts.html" style="color: white; text-decoration: none;"><font size="+4">ㅤㅤMis Textos</a></strong></li>ㅤㅤ
 
 
 
-
-<center> <strong> <a style= "color: white"><font size="+26"> George R. W. Wagner</a></strong></center>
-  <font face=Arial>
-      <center><li><strong><a href="georgetxts.html" style="color: white; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>
-  <body ondragstart="return false" onselectstart="return false" oncontextmenu="return false">
-
-        <ul class="menu">
+<center> <strong><center><font size="+2"><h3 style= "color: white"><font size="+1">El universo es casi como el mar, es vasto, silencioso y ha conocido tanto alegrías como tristezas, pero, tal como el mar, nunca revela a viva voz los secretos que celosamente guarda y ni el astrólogo más versado puede jactarse de haberlo descubierto su totalidad. ¿Cuántas vidas ha costado mapearlo por completo? ¿Es un esfuerzo vano que deberíamos abandonar y dejarnos morir en apenas un segundo de los millones de años de existencia del cosmos? ¿O deberíamos seguir solo por amor y no por la mera pretensión de conquistarlo?</h3></strong></center>
 
 
 
-
-
-
-
-    <center><strong><center> <h3 style= "color:  white"><font size="+2">El universo es casi como el mar, es vasto, silencioso y ha conocido tanto alegrías como tristezas, pero, tal como el mar, nunca revela a viva voz los secretos que celosamente guarda y ni el astrólogo más versado puede jactarse de haberlo descubierto su totalidad. ¿Cuántas vidas ha costado mapearlo por completo? ¿Es un esfuerzo vano que deberíamos abandonar y dejarnos morir en apenas un segundo de los millones de años de existencia del cosmos? ¿O deberíamos seguir solo por amor y no por la mera pretensión de conquistarlo?</h3></strong></center>
-
-        </style>
-
-    <div id="menuu">
-
-
-
-<div id="menu">
-      <ul>
-
-
-      <span></span>
-
-
-              </ul>
-
-        </div>
-
-
-
+<div id="menuu">
 
   </body>
 </html>
@@ -51,37 +28,37 @@
 
 
 
-<style media="screen">
+  <style media="screen">
 
 
 
 .menu li{
-display: inline;
-font-family: Arial;
-padding-right: 0px;
+  display: inline;
+  font-family: Arial;
+  padding-right: 0px;
 }
 
 .menu{
-padding-left: 0%;
+  padding-left: 0%;
 }
 
 
-h3{
-  max-width: 450px;
-text-align: center;
-line-height: 25px;
-padding: 0 0px
+  h3{
+    max-width: 440px;
+  text-align: center;
+  line-height: 26px;
+  padding: 0 0px
 
 
-}
+  }
 
 
-body {
-background-image: url('cielo.jpg');
-background-repeat: no-repeat;
-  background-color :white;
-background-attachment: fixed;
-background-position: center;
+  body {
+    background-image: url('cielo.jpg');
+  background-repeat: no-repeat;
+    background-color :black;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 </style>
