--- a/George R. W. Wagner.html
+++ b/George R. W. Wagner.html
@@ -7,7 +7,7 @@
     <title>George R. W. Wagner</title>
 <center><li><strong><a style="color: white"; text-decoration: none;"><font size="+4">George R. W. Wagner</a></strong></li>
   </head>
-  <body ondragstart="return false" onselectstart="return false" oncontextmenu="return false">>
+  <body ondragstart="return false" onselectstart="return false" oncontextmenu="return false">
 
     <ul class="menu">
 
