--- a/lunatikaos.html
+++ b/lunatikaos.html
@@ -17,7 +17,7 @@
 
 
             <font face=Arial>
-                <center><li><strong><a href="lunatikaostxt.html" style="color: #dbc8e6; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤㅤ
+                <center><li><strong><a href="lunatikaostxt.html" style="color: #dbc8e6; text-decoration: none;"><font size="+3">ㅤㅤㅤMis Textos</a></strong></li>ㅤㅤ
 
 
 
