--- a/Textos.html
+++ b/Textos.html
@@ -5,7 +5,7 @@
     <title>Free Freaks - Mis Textos</title>
   </head>
   <link rel="icon" href="iconos.png">
-  <body>
+  <body ondragstart="return false" onselectstart="return false" oncontextmenu="return false">
     <center>
     <center><H1><u><b><a href="menu.html" style= "color: white">Menu</a></b></u><H1></center>
 
