--- a/qienessomos.html
+++ b/qienessomos.html
@@ -64,7 +64,7 @@
           <strong>
           <font face=Arial>
             <li><center><h2 style= "color: red"> ㅤ </h2></center></li>
-            <li><center><h2 style= "color: red"><a href="menu.html" style="color: #8b0000; text-decoration: none;">1) FreekTomㅤ</a> </li>
+            <li><center><h2 style= "color: red"><a style="color: #8b0000; text-decoration: none;">1) FreekTomㅤ</a> </li>
                 <li><center><h2 style= "color: red"><a href="mrdoeman.html" style="color: #6e6e6e; text-decoration: none;">2) Mrdoemanㅤ</a> </li>
                 <li><center><h2 style= "color: red"><a href="seraphim.html" style="color: #9d981c; text-decoration: none;">3) Seraphimㅤ</a> </li>
                 <li><center><h2 style= "color: red"><a href="dunkat.html" style="color: #5a0e87; text-decoration: none;">4) Dunkatㅤ</a> </li>
