--- a/dibujosjun.html
+++ b/dibujosjun.html
@@ -22,6 +22,11 @@
       <a href="dibujosjun/6.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/6.jpg"></a>
       <a href="dibujosjun/7.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/7.jpg"></a>
       <a href="dibujosjun/8.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/8.jpg"></a>
+      <a href="dibujosjun/9.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/9.jpg"></a>
+      <a href="dibujosjun/10.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/10.jpg"></a>
+      <a href="dibujosjun/11.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/11.jpg"></a>
+      <a href="dibujosjun/12.jpg"data-lightbox="Galeria"><img src="dibujosjunsmall/12.jpg"></a>
+
   </body>
 </html>
 <style>
