--- a/qienessomos.html
+++ b/qienessomos.html
@@ -66,16 +66,16 @@
             <li><center><h2 style= "color: red"> ㅤ </h2></center></li>
             <li><center><h2 style= "color: red"><a style="color: #8b0000; text-decoration: none;">1) FreekTomㅤ</a> </li>
                 <li><center><h2 style= "color: red"><a href="mrdoeman.html" style="color: #6e6e6e; text-decoration: none;">2) Mrdoemanㅤ</a> </li>
-                <li><center><h2 style= "color: red"><a href="seraphim.html" style="color: #9d981c; text-decoration: none;">3) Seraphimㅤ</a> </li>
-                <li><center><h2 style= "color: red"><a href="dunkat.html" style="color: #5a0e87; text-decoration: none;">4) Dunkatㅤ</a> </li>
-                <li><center><h2 style= "color: red"><a href="lunatikaos.html" style="color: #5c8495; text-decoration: none;">5) Lunatikaosㅤ</a> </li>
-                <li><center><h2 style= "color: red"><a href="junchan.html" style="color: #D6dbdb; text-decoration: none;">6) Jun-Chanㅤ</a> </li>
+                <li><center><h2 style= "color: red"><a href="dunkat.html" style="color: #5a0e87; text-decoration: none;">3) Dunkatㅤ</a> </li>
+                <li><center><h2 style= "color: red"><a href="lunatikaos.html" style="color: #5c8495; text-decoration: none;">4) Lunatikaosㅤ</a> </li>
+                <li><center><h2 style= "color: red"><a href="junchan.html" style="color: #D6dbdb; text-decoration: none;">5) Jun-Chanㅤ</a> </li>
+                  <li><center><h2 style= "color: red"><a href="camilandinus.html" style="color: #9bf4fa; text-decoration: none;">6) Camilandinus </a> </li>
+
                   <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
                     <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
                       <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
                         <li><center><h2 style= "color: red"><a style="color: black; text-decoration: none;">ㅤㅤㅤ</a> </li>
 
-                <li><center><h2 style= "color: red"><a href="George R. W. Wagner.html" style="color: green; text-decoration: none;">7) George R. W. Wagner </a> </li>
 ㅤㅤㅤㅤㅤㅤㅤㅤㅤ
 
 
