--- a/camilandinus.html
+++ b/camilandinus.html
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body background="camilandinus.jpg">
+  <body background="fondu.ppg">
 
     <center> <strong><center> <h3 style= "color: white"><font size="+2">Ambiciones de
 cabeza
@@ -54,7 +54,7 @@ padding: 0 0px
 
 
 body {
-background-image: url('camilandinus.jpg');
+background-image: url('fond.png');
 background-repeat: no-repeat;
   background-color :#a816ff;
 background-attachment: fixed;
