--- a/camilandinus.html
+++ b/camilandinus.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-             <a style= "color: red"><a href="qienessomos.html" style="color: white; text-decoration: none;"><strong><font face=Arial> <font size="+6">ㅤATRAS</a></strong> </font>
+             <a style= "color: red"><a href="qienessomos.html" style="color: black; text-decoration: none;"><strong><font face=Arial> <font size="+6">ㅤATRAS</a></strong> </font>
     <meta charset="utf-8">
     <title>Camilandinus</title>
 
 
-    <center><strong><a style="color: white"; text-decoration: none;"><font size="+4">Camilandinus</a></strong></li>
+    <center><strong><a style="color: black"; text-decoration: none;"><font size="+4">Camilandinus</a></strong></li>
       <font face=Arial>
-          <center><strong><a href="camitexts.html" style="color: white; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤ
+          <center><strong><a href="camitexts.html" style="color: black; text-decoration: none;"><font size="+3">Mis Textos</a></strong></li>ㅤ
 
   </head>
 
-  <body background="fondu.ppg">
+  <body background="fond.png">
 
-    <center> <strong><center> <h3 style= "color: white"><font size="+2">Ambiciones de
+    <center> <strong><center> <h3 style= "color: black"><font size="+2">Ambiciones de
 cabeza
  asfixian–presionan–
 el palpitar;
