--- a/Sobre mi.html
+++ b/Sobre mi.html
@@ -11,9 +11,9 @@
     <font face="Arial" size="7" color: "white">
     <b><a href="menu.html" style="color: white">Menu</a></b></center></font>
     <font face=Arial>
-  <center><H3><font color="white">Tomas C. 18 años, estudiante.
+  <center><H3><font color="white">F R E E K T O M.
 
-Naci un 14 de Noviembre el 1995, soy horoscopo escorpio basandonos en caracteristicas cosmicas, hijo de Eugenia, padrastro de chico: Daniel el Psiquiatra, me ayudo a criarme muy bien, buena persona, siempre me gusto la diversion, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardin!
+Buenas mi nombre artistico es Freektom y HappyBoii, soy de un horoscopo muy bravo basandonos en caracteristicas cosmicas, hijo de Eugenia, padrastro de chico: Daniel el Psiquiatra, me ayudo a criarme muy bien, buena persona, siempre me gusto la diversion, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardin!
 
 Me mude a Chile cuando tenia 7 anios y vivi 14 en Chile, tengo a todas mis viejas y buenas amistades ahi, estoy un poco solo aca en Uruguay, no encajo con la cultura al menos creo, pero estoy acostumbrado a ser un poco "distinto".
 
