--- a/Sobre mi.html
+++ b/Sobre mi.html
@@ -13,7 +13,7 @@
     <font face=Arial>
   <center><H3><font color="white">F R E E K T O M.
 
-Buenas mi nombre artistico es Freektom y HappyBoii, soy de un horoscopo muy bravo basandonos en caracteristicas cosmicas, hijo de Eugenia, padrastro de chico: Daniel el Psiquiatra, me ayudo a criarme muy bien, buena persona, siempre me gusto la diversion, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardin!
+Buenas mi nombre artistico es Freektom y HappyBoii, soy de un horoscopo muy bravo basandonos en caracteristicas cosmicas, hijo de la madre mas santa, mi padrastro me ayudo a criarme muy bien, es buena persona, siempre me gusto la diversion, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardin!
 
 Me mude a Chile cuando tenia 7 anios y vivi 14 en Chile, tengo a todas mis viejas y buenas amistades ahi, estoy un poco solo aca en Uruguay, no encajo con la cultura al menos creo, pero estoy acostumbrado a ser un poco "distinto".
 
