--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Free Freaks</title>
   </head>
 <link rel="icon" href="iconos.png">  <body>
-    <font size="2" style="color: red">® Creado por Tomas Collado Long </font>
+    <font size="2" style="color: red">® Creado por Freektom (TCL) </font>
     <center>
       <font size="5" font="Arial">
   <h2 id:"titulo" style="color: white">Free Freaks</h2>
