--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
 
 
   <link rel="icon" href="iconos.png">
-        <font size="1" style="color: red">® Creado por Tomas Collado Long </font>
+        <font size="1" style="color: red">® Creado por Freektom (TCL) </font>
 <form>
   <img src="ejem2.png"/>
   <center>
