--- a/menu.html
+++ b/menu.html
@@ -12,90 +12,60 @@
   </div>
 
 
-
   <link rel="icon" href="iconos.png">
+        <font size="1" style="color: red">® Creado por Tomas Collado Long </font>
         <font size="1" style="color: red">® Creado por Freektom (TCL) </font>
 <form>
   <img src="ejem2.png"/>
   <center>
     <center>
-
-
-
-
       <style media="screen">
         * {
           background-color: #040707
-
         }
-
       </style>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 25%; color: red"><a href="Fotografias.html"> Fotografias</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html"> Dibujos</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 37%; color: red"><a href="Textos.html"> Mis Textos</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 43%; color: red"><a href="Musica.html"> Mi Musica</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 49%; color: red"><a href="Pareidolias.html"> Pareidolias</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 55%; color: red"><a href="Videoclips.html"> Videoclips</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 61%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
       </div>
-
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 67%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
       </div>
-
-
-
     </center>
-
-
-
-
-
-
-
 </form>
     </center>
-
     <font size="5" face=Arial>
 <h1 style="left:700px; position: absolute;top: 8%; color: red">FreekTom</h1>
-
- 
-  /*      
 <div style= "text-align: top;">
   <font size="18" face=Arial>
-<b style="left:605px; position: absolute;top: 80%; color: red"><a href="freeks.html"> .::FREEKS::.</b>
+<b style="left:605px; position: absolute;top: 80%; color: red"><a href="freeks.html"></b>
 </div>
-*/
   <body>
-
   </body>
 </html>
 <style media="screen">
@@ -112,8 +82,6 @@
     text-decoration: none;
     border-radius: 5px;
   }
-
-
   b {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #040707
@@ -126,8 +94,6 @@
     text-decoration: none;
     border-radius: 5px;
   }
-
-
   button {
     color:white;
     outline: none;
@@ -136,7 +102,6 @@
     text-decoration: none;
     border-radius: 5px;
   }
-
   #logodos{
     float:right;
   }
